Fixed build warnings and added documentation